--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,12 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.7.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  build_runner: ^2.4.11
+  hive_generator: ^2.0.1
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
