--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,19 +28,21 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.4
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.7.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  meta: ^1.12.0
 
 dev_dependencies:
   build_runner: ^2.4.11
-  hive_generator: ^2.0.1
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
