--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,11 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   meta: ^1.12.0
+  modal_progress_hud_nsn: ^0.5.1
 
 dev_dependencies:
   build_runner: ^2.4.11
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.1
