--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   hive_flutter: ^1.1.0
   meta: ^1.12.0
   modal_progress_hud_nsn: ^0.5.1
+  intl: ^0.19.0
 
 dev_dependencies:
   build_runner: ^2.4.11
